Add language on pages

--- a/lang/french.json
+++ b/lang/french.json
@@ -1,5 +1,6 @@
 {
     "mailbox": "Boite Mail",
+    "authentification": "Authentification",
     "username": "Nom d'utilisateur",
     "password": "Mot de passe",
     "login": "Connexion",
