--- a/lang/english.json
+++ b/lang/english.json
@@ -1,5 +1,6 @@
 {
     "mailbox": "Mailbox",
+    "authentification": "Authentification",
     "username": "Username",
     "password": "Password",
     "login": "Login",
